<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/register_form_username_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_username_title" />

            <EditText
                android:id="@+id/register_form_username_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:id="@+id/register_form_email_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_email_title"/>

            <EditText
                android:id="@+id/register_form_email_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/register_form_password_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_password_title" />

            <EditText
                android:id="@+id/register_form_password_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

            <TextView
                android:id="@+id/register_form_password_again_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_password_again_title"/>

            <EditText
                android:id="@+id/register_form_password_again_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/register_form_firstname_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_firstname_title"/>

            <EditText
                android:id="@+id/register_form_firstname_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:id="@+id/register_form_lastname_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_form_lastname_title" />

            <EditText
                android:id="@+id/register_form_lastname_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onRegisterClick"
                android:text="@string/register_btn_text"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>