...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/login_username_title" />

        <EditText
            android:id="@+id/login_username_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="5dp" />

        <TextView
...
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/login_password_title" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onLoginClick"
            android:text="@string/title_login" />

    </LinearLayout>
...
