<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/brand_icon" />

        <TextView
            style="@style/HeaderText"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/analytics.optin.title"/>

        <TextView
            style="@style/TextBase"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:textColor="@color/text_grey"
            android:text="@string/analytics.optin.description" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin">

                <CheckBox
                    android:id="@+id/bugreport_checkbox"
                    style="@style/TextBase"
                    android:text="@string/privacy.optin.bugreport.switch" />

                <CheckBox
                    android:id="@+id/analytics_checkbox"
                    style="@style/TextBase"
                    android:text="@string/privacy.optin.analytics.switch" />
        </LinearLayout>


        <Button
            android:id="@+id/continue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_continue"
            tools:visibility="visible"
            android:paddingStart="@dimen/padding_medium_2"
            android:paddingEnd="@dimen/padding_medium_2"
            android:theme="@style/PrimaryButton"/>


</LinearLayout>
