...
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>

    <string name="menu_download">Download Courses</string>
    <string name="menu_change_text_size">Change text size</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy and Your Data</string>
    <string name="menu_about">About and Help</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
    <string name="menu_scorecard">Scorecard</string>
...
    <string name="register_btn_text">Register</string>

    <string name="reset_password_field">Username or Email</string>
    <string name="reset_password_description">Please enter your username or email below and you will be sent an email with a link to reset your password.</string>

    <string name="remember_username_description">Please enter your email below and you will be sent an email with a reminder of your username.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="loading">Loading</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
...
